# RecipeApp

./: .env.example  .gitignore  Cargo.toml  README.md  app.env.example  docker-compose-dev.yml  docker-compose.yml  tools.py
data/nginx/: recipe-dev.conf  recipe.conf
frontend/: .prettierignore  components.json  eslint.config.js  index.html  openapi.json  orval.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/public/: manifest.json
frontend/public/locales/de/: food-menu.json  ingredients.json  login.json  recipe.json  settings.json  tag.json  translation.json
frontend/public/locales/en/: ingredients.json  login.json  recipe.json  settings.json  tag.json  translation.json
frontend/scripts/: gen-api.sh  run-ci.sh
frontend/src/: i18n.ts  main.tsx  routeTree.gen.ts  styles.css
frontend/src/api/: api-client.ts  api-client.tsx  api.tsx  error.tsx  websockets.ts
frontend/src/api/model/: account.interface.ts  global.interface.ts  jwt.interface.ts  (+5 more)
frontend/src/components/: RecipeTable.tsx  app-sidebar.tsx  data-table.tsx  ingredients-grid.tsx  login.tsx  navbar.tsx  recipe-card.tsx  recipe-form.tsx  recipe-search.tsx  recipe-table.tsx  tags-overview.tsx
frontend/src/context/: account.tsx  auth.tsx  error-context.tsx  ingredients.tsx  recipe.tsx  recipes.tsx  tag.tsx  tags.tsx  user.tsx
frontend/src/hooks/: element-height.ts  use-mobile.ts
frontend/src/lib/: event-emitter.ts  utils.ts
frontend/src/routes/: __root.tsx  _app.lazy.tsx  _food.lazy.tsx  index.tsx
frontend/src/utils/: console.ts  result.ts  utils.ts
migrations/: 0001_initial.toml
scripts/: generate-new-certs.sh  init-user-dev.sh  translation_scanner.py
webserver/: Cargo.toml
webserver/migrations/: 0001_initial.toml  0002_placeholder.toml  0003_placeholder.toml  0004_placeholder.toml
webserver/src/: cli.rs  config.rs  global.rs  main.rs  tracing.rs
webserver/src/http/: mod.rs  server.rs
webserver/src/http/common/: errors.rs  schemas.rs
webserver/src/http/extractors/: api_json.rs  authentication.rs  mod.rs
webserver/src/http/handler/: mod.rs
webserver/src/http/handler/account/: handler.rs  impls.rs  mod.rs  schema.rs
webserver/src/http/handler/ingredients/: handler.rs  impls.rs  mod.rs  schema.rs
webserver/src/http/handler/meta/: handler.rs  mod.rs  schema.rs
webserver/src/http/handler/oidc/: handler.rs  mod.rs  schema.rs
webserver/src/http/handler/recipes/: handler.rs  impls.rs  mod.rs  schema.rs
webserver/src/http/handler/tags/: handler.rs  impls.rs  mod.rs  schema.rs
webserver/src/http/handler/user/: handler.rs  impls.rs  schema.rs
webserver/src/http/handler/users/: handler.rs  impls.rs  mod.rs
webserver/src/http/handler/websockets/: handler.rs  mod.rs  schema.rs
webserver/src/http/middleware/: auth_required.rs  auth_required_layer.rs  catch_unwind.rs  catch_unwind_layer.rs  mod.rs
webserver/src/models/: ingredients.rs  mod.rs  recipe.rs  recipe_ingredients.rs  recipe_steps.rs  recipe_tag.rs  tags.rs  user.rs
webserver/src/models/account/: db.rs  impls.rs  mod.rs
webserver/src/models/ingredients/: db.rs  impls.rs  mod.rs
webserver/src/models/recipe_ingredients/: db.rs  mod.rs
webserver/src/models/recipe_steps/: db.rs  mod.rs
webserver/src/models/recipes/: db.rs  impls.rs  mod.rs
webserver/src/models/tags/: db.rs  impls.rs  mod.rs
webserver/src/models/users/: mod.rs
webserver/src/modules/: mod.rs  oidc.rs  websockets.rs
(+84 files in other folders)
