[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

# Async
tokio = { version = ">=1.23.1", features = ["full"] }
futures-util = { version = "~0.3" }

# CLI
clap = { version = "~4", features = ["derive"] }

# Datatypes
url = { version = "~2", features = ["serde"] }
time = { version = "~0.3" }

# Error handling
anyhow = { version = "~1" }

# Serialization
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }

# Tracing
tracing = { version = "~0.1" }
tracing-subscriber = { version = "~0.3", features = ["env-filter", "json"] }
tracing-forest = { version = "~0.2", features = ["ansi", "tokio", "smallvec", "chrono"] }

# Web framework
galvyn = { git = "https://github.com/myOmikron/galvyn.git", rev = "1a651aa11d75f3a6ed5d66118955d14726c0cb6b" }
tower-http = { version = "~0.6", features = ["trace"] }

# Account authentication
openidconnect = { version = "~4", features = ["accept-rfc3339-timestamps", "timing-resistant-secret-traits"] }
uuid = { version = "~1", features = ["v4"] }